--- a/.jshintrc
+++ b/.jshintrc
@@ -1,29 +1,62 @@
 {
-  "bitwise": true,
-  "boss": true,
-  "browser": true,
-  "camelcase": false,
-  "curly": true,
-  "eqeqeq": false,
-  "eqnull": true,
-  "freeze": true,
-  "immed": true,
-  "indent": 2,
-  "latedef": false,
-  "maxcomplexity": 8,
-  "maxdepth": 4,
-  "maxlen": 100,
-  "maxparams": 4,
-  "maxstatements": 30,
-  "newcap": true,
-  "noarg": true,
-  "noempty": true,
-  "quotmark": "single",
-  "strict": true,
-  "sub": true,
-  "trailing": true,
-  "undef": true,
-  "unused": false,
-  "globals": {
-  }
+    "bitwise": true,
+    "camelcase": true,
+    "curly": true,
+    "eqeqeq": true,
+    "es3": false,
+    "forin": true,
+    "freeze": true,
+    "immed": true,
+    "indent": 2,
+    "latedef": "nofunc",
+    "newcap": true,
+    "noarg": true,
+    "noempty": true,
+    "nonbsp": true,
+    "nonew": true,
+    "plusplus": false,
+    "quotmark": "single",
+    "undef": true,
+    "unused": false,
+    "strict": false,
+    "maxparams": 10,
+    "maxdepth": 5,
+    "maxstatements": 40,
+    "maxcomplexity": 8,
+    "maxlen": 120,
+
+    "asi": false,
+    "boss": false,
+    "debug": false,
+    "eqnull": true,
+    "esnext": false,
+    "evil": false,
+    "expr": false,
+    "funcscope": false,
+    "globalstrict": false,
+    "iterator": false,
+    "lastsemic": false,
+    "laxbreak": false,
+    "laxcomma": false,
+    "loopfunc": true,
+    "maxerr": false,
+    "moz": false,
+    "multistr": false,
+    "notypeof": false,
+    "proto": false,
+    "scripturl": false,
+    "shadow": false,
+    "sub": true,
+    "supernew": false,
+    "validthis": false,
+    "noyield": false,
+
+    "browser": true,
+    "node": false,
+
+    "globals": {
+        "module": false,
+        "angular": false,
+        "$": false
+    }
 }
