--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "squizlabs/php_codesniffer": "2.*",
         "cubesolutions/phpconsistent": "dev-master",
         "fluidtypo3/coding-standards": "*",
-        "cakephp/cakephp-codesniffer": "*"
+        "cakephp/cakephp-codesniffer": "*",
+        "wimg/php-compatibility": "dev-master",
+        "simplyadmire/composer-plugins" : "@dev"
     },
   "minimum-stability": "stable",
   "scripts": {
