--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
         "url": "https://github.com/approvedfoodcouk/Standards_ApprovedFood"
      }],
     "require": {
-        "php": ">=5.3.0"
-    },
-    "require-dev": {
+        "php": ">=5.3.0",
         "squizlabs/php_codesniffer": "2.*",
         "cubesolutions/phpconsistent": "dev-master",
         "fluidtypo3/coding-standards": "*",
